--- a/package.json
+++ b/package.json
@@ -14,10 +14,18 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@mdx-js/loader": "^2.0.0",
+    "@next/mdx": "^12.1.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "autoprefixer": "^10.4.2",
+    "cssnano": "^5.0.17",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.7",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.8",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   }
 }
