--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -16,7 +17,8 @@
   "devDependencies": {
     "@mdx-js/loader": "^2.0.0",
     "@next/mdx": "^12.1.0",
-    "@types/node": "17.0.21",
+    "@types/classnames": "^2.3.1",
+    "@types/node": "^17.0.21",
     "@types/react": "17.0.39",
     "autoprefixer": "^10.4.2",
     "cssnano": "^5.0.17",
