--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "classnames": "^2.3.1",
+    "fuse.js": "^6.5.3",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
