--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "fuse.js": "^6.5.3",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@mdx-js/loader": "^2.0.0",
+    "@mdx-js/mdx": "^2.0.0",
     "@next/mdx": "^12.1.0",
     "@types/classnames": "^2.3.1",
     "@types/node": "^17.0.21",
