--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@mdx-js/react": "^2.0.0",
     "classnames": "^2.3.1",
     "fuse.js": "^6.5.3",
     "next": "12.1.0",
@@ -31,6 +32,11 @@
     "postcss": "^8.4.7",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
+    "rehype-highlight": "^5.0.2",
+    "rehype-katex": "^6.0.2",
+    "rehype-mathjax": "^4.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   }
